# Hyuk998

./: README.md  build.gradle  settings.gradle
Mobile/: local.properties
Mobile/app/: build.gradle.kts
Mobile/app/src/main/cpp/: CMakeLists.txt  frida_detector.cpp  frida_detector.h
Mobile/app/src/main/java/com/baro/baro_baedal/: MainActivity.kt
Mobile/app/src/main/java/com/baro/baro_baedal/modules/security/: FridaNative.kt  SecurityChecker.kt
scenario_2/SQL_Injection/: Requests.py  SqlModule.py  SqlRepository.py  main.py
scenario_2/Virus/: SPRING_SERVER_EXAMPLE.md  settings.gradle.kts
scenario_2/Virus/app/: build.gradle.kts
scenario_2/Virus/app/src/main/: AndroidManifest.xml
scenario_2/Virus/app/src/main/java/com/baro/baro_baedal/: AppNavigator.kt  MainActivity.kt
scenario_2/Virus/app/src/main/res/values/: strings.xml  themes.xml
scenario_2/Virus/gradle/wrapper/: gradle-wrapper.properties
scenario_2/virus_hacker_server/virus_hacker_web/: build.gradle  settings.gradle
scenario_2/virus_hacker_server/virus_hacker_web/src/main/java/com/tools/virus_hacker_web/: VirusHackerWebApplication.java
scenario_2/virus_hacker_server/virus_hacker_web/src/main/resources/: application.yml
scenario_2/virus_hacker_server/virus_hacker_web/src/main/webapp/: ransomware.ps1
scenario_2/virus_hacker_server/virus_hacker_web/src/test/java/com/tools/virus_hacker_web/: VirusHackerWebApplicationTests.java
scenario_2/virus_hacker_server/virus_hacker_web/uploads/20251118170159/: data.csv
scenario_3/IoT코드/: client.py  server.py
(+25 files in other folders)
